# manipulator_planning_simple

./: .gitignore  .gitmodules  README.md  READMI.md  rename_script.py  requirements.txt
.github/workflows/: ci.yml  main.yml
C_library_for_planing/: CMakeLists.txt  README.md  WINCMakeLists.txt  data.json  example.csv  example.xml  main_a_star.cpp  main_a_star_single.cpp  main_rrt.cpp  main_rrt_single.cpp  scene1_data.json  scene2_data.json  scene3_data.json
C_library_for_planing/A_star/: CMakeLists.txt
C_library_for_planing/A_star/include/: benchmark.h  planner.h
C_library_for_planing/A_star/src/: planner.cpp
C_library_for_planing/RRT/: CMakeLists.txt
C_library_for_planing/RRT/include/: file_saver.h  planner.h
C_library_for_planing/RRT/src/: file_saver.cpp  planner.cpp
C_library_for_planing/RRT/test/: example.xml  test_IK.cpp
C_library_for_planing/common/: CMakeLists.txt
C_library_for_planing/common/include/: inverse_kinematics.h  obstacles.h  parsing.h  robot.h
C_library_for_planing/common/src/: obstacles.cpp  parsing.cpp  robot.cpp
C_library_for_planing/dataset/scene1/: scene_1_test_1.xml  scene_1_test_10.xml  scene_1_test_11.xml  scene_1_test_12.xml  scene_1_test_13.xml  scene_1_test_14.xml  scene_1_test_15.xml  scene_1_test_16.xml  scene_1_test_17.xml  scene_1_test_18.xml  scene_1_test_19.xml  scene_1_test_2.xml  scene_1_test_20.xml  scene_1_test_21.xml  scene_1_test_22.xml  scene_1_test_23.xml  scene_1_test_24.xml  scene_1_test_25.xml  scene_1_test_26.xml  scene_1_test_27.xml  scene_1_test_28.xml  scene_1_test_29.xml  scene_1_test_3.xml  scene_1_test_30.xml  scene_1_test_31.xml  scene_1_test_32.xml  scene_1_test_33.xml  scene_1_test_34.xml  scene_1_test_35.xml  scene_1_test_36.xml  scene_1_test_37.xml  scene_1_test_38.xml  scene_1_test_39.xml  scene_1_test_4.xml  scene_1_test_40.xml  scene_1_test_41.xml  scene_1_test_42.xml  scene_1_test_43.xml  scene_1_test_44.xml  scene_1_test_45.xml  (+10 more)
C_library_for_planing/dataset/scene2/: scene_2_test_1.xml  scene_2_test_10.xml  scene_2_test_11.xml  scene_2_test_12.xml  scene_2_test_13.xml  scene_2_test_14.xml  scene_2_test_15.xml  scene_2_test_16.xml  scene_2_test_17.xml  scene_2_test_18.xml  scene_2_test_19.xml  scene_2_test_2.xml  scene_2_test_20.xml  scene_2_test_21.xml  scene_2_test_22.xml  scene_2_test_23.xml  scene_2_test_24.xml  scene_2_test_25.xml  scene_2_test_26.xml  scene_2_test_27.xml  scene_2_test_28.xml  scene_2_test_29.xml  scene_2_test_3.xml  scene_2_test_30.xml  scene_2_test_31.xml  scene_2_test_32.xml  scene_2_test_33.xml  scene_2_test_34.xml  scene_2_test_35.xml  scene_2_test_36.xml  scene_2_test_37.xml  scene_2_test_38.xml  scene_2_test_39.xml  scene_2_test_4.xml  scene_2_test_40.xml  scene_2_test_41.xml  scene_2_test_42.xml  scene_2_test_43.xml  scene_2_test_44.xml  scene_2_test_45.xml  (+10 more)
C_library_for_planing/dataset/scene3/: scene_3_test_1.xml  scene_3_test_10.xml  scene_3_test_11.xml  scene_3_test_12.xml  scene_3_test_13.xml  scene_3_test_14.xml  scene_3_test_15.xml  scene_3_test_16.xml  scene_3_test_17.xml  scene_3_test_18.xml  scene_3_test_19.xml  scene_3_test_2.xml  scene_3_test_20.xml  scene_3_test_21.xml  scene_3_test_22.xml  scene_3_test_23.xml  scene_3_test_24.xml  scene_3_test_25.xml  scene_3_test_26.xml  scene_3_test_27.xml  scene_3_test_28.xml  scene_3_test_29.xml  scene_3_test_3.xml  scene_3_test_30.xml  scene_3_test_31.xml  scene_3_test_32.xml  scene_3_test_33.xml  scene_3_test_34.xml  scene_3_test_35.xml  scene_3_test_36.xml  scene_3_test_37.xml  scene_3_test_38.xml  scene_3_test_39.xml  scene_3_test_4.xml  scene_3_test_40.xml  scene_3_test_41.xml  scene_3_test_42.xml  scene_3_test_43.xml  scene_3_test_44.xml  scene_3_test_45.xml  (+10 more)
C_library_for_planing/include/: benchmark.h  file_saver.h  file_saver.tpp  geometry.h  inverse_kinematics.h  kd_tree.h  obstacles.h  parsing.h  planner.h  robot.h
C_library_for_planing/src/: file_saver.cpp  gmon.out  inverse_kinematics.cpp  kd_tree.cpp  main copy.cpp  main.cpp  obstacles.cpp  parsing.cpp  planner.cpp  robot.cpp
C_library_for_planing/test/: mytests.cpp  test_IK.cpp
GUI_creation/: GUI.py  GUI.ui  GUI_ui.py  MainWindow.py  README.md  example.csv  goal_point.py  graphics.py  heatbar_scene.py  main.py  obstacles.py  requirements.txt  result_trajectory.xml  robo_scene.py  robot_class.py  test.xml  xml_maker.py  xml_parser.py
GUI_goals_visualiser/: GUI.py  GUI.ui  MainWindow.py  README.md  goal_point.py  main.py  requirements.txt  xml_parser.py
GUI_goals_visualizer/: GUI.py  GUI.ui  MainWindow.py  main.py  obstacles.py  robo_scene.py  ui2py.bat  xml_maker.py
dataset/scene1/: scene_1_test_13.xml  scene_1_test_14.xml  scene_1_test_18.xml  scene_1_test_19.xml  scene_1_test_20.xml  scene_1_test_22.xml  scene_1_test_23.xml  scene_1_test_24.xml  scene_1_test_25.xml  scene_1_test_28.xml  scene_1_test_3.xml  scene_1_test_30.xml  scene_1_test_31.xml  scene_1_test_33.xml  scene_1_test_34.xml  scene_1_test_37.xml  scene_1_test_38.xml  scene_1_test_39.xml  scene_1_test_4.xml  scene_1_test_42.xml  scene_1_test_44.xml  scene_1_test_45.xml  scene_1_test_46.xml  scene_1_test_49.xml  scene_1_test_5.xml  scene_1_test_6.xml  scene_1_test_7.xml  scene_1_test_9.xml
dataset/scene1r/: scene_1_random_test_1.xml  scene_1_random_test_10.xml  scene_1_random_test_100.xml  scene_1_random_test_11.xml  scene_1_random_test_12.xml  scene_1_random_test_13.xml  scene_1_random_test_14.xml  scene_1_random_test_15.xml  scene_1_random_test_16.xml  scene_1_random_test_17.xml  scene_1_random_test_18.xml  scene_1_random_test_19.xml  scene_1_random_test_2.xml  scene_1_random_test_20.xml  scene_1_random_test_21.xml  scene_1_random_test_22.xml  scene_1_random_test_23.xml  scene_1_random_test_24.xml  scene_1_random_test_25.xml  scene_1_random_test_26.xml  scene_1_random_test_27.xml  scene_1_random_test_28.xml  scene_1_random_test_29.xml  scene_1_random_test_3.xml  scene_1_random_test_30.xml  scene_1_random_test_31.xml  scene_1_random_test_32.xml  scene_1_random_test_33.xml  scene_1_random_test_34.xml  scene_1_random_test_35.xml  scene_1_random_test_36.xml  (+69 more)
(+6158 files in other folders)
